--- a/index.html
+++ b/index.html
@@ -6,22 +6,51 @@
   <title>BENSARLLOOHHAA</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      background: #111;
+      color: #fff;
       text-align: center;
-      background: #f5f5f5;
       margin: 0;
       padding: 50px;
+      font-family: 'Arial', sans-serif;
     }
+
     h1 {
-      font-size: 72px;
-      color: #222;
-      margin-bottom: 40px;
+      font-size: 80px;
+      color: #ff00cc;
+      text-shadow:
+        0 0 5px #ff00cc,
+        0 0 10px #ff00cc,
+        0 0 20px #ff00cc,
+        0 0 40px #ff0080,
+        0 0 80px #ff0080,
+        0 0 90px #ff0080;
+      animation: flicker 2s infinite alternate;
+      margin-bottom: 50px;
     }
+
+    @keyframes flicker {
+      0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
+        opacity: 1;
+        text-shadow:
+          0 0 5px #ff00cc,
+          0 0 10px #ff00cc,
+          0 0 20px #ff00cc,
+          0 0 40px #ff0080,
+          0 0 80px #ff0080,
+          0 0 90px #ff0080;
+      }
+
+      20%, 24%, 55% {
+        opacity: 0.4;
+        text-shadow: none;
+      }
+    }
+
     img {
       max-width: 100%;
       height: auto;
       border-radius: 12px;
-      box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+      box-shadow: 0 10px 30px rgba(255, 0, 204, 0.4);
     }
   </style>
 </head>
