--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         0 0 10px #ff00cc,
         0 0 20px #ff00cc,
         0 0 40px #ff0080,
-        0 0 80px #ff0080,
-        0 0 90px #ff0080;
+        0 0 80px #ff0080;
       animation: flicker 2s infinite alternate;
       margin-bottom: 20px;
     }
@@ -32,10 +31,16 @@
       display: flex;
       justify-content: center;
       gap: 100px;
-      margin-bottom: 50px;
+      margin-bottom: 40px;
     }
 
     .bff {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .bff-title {
       font-size: 36px;
       color: #00ffff;
       text-shadow:
@@ -46,6 +51,23 @@
       animation: partyPulse 1.5s infinite ease-in-out;
     }
 
+    .girl {
+      font-size: 60px;
+      margin-top: 15px;
+      text-shadow:
+        0 0 8px #ff66cc,
+        0 0 16px #ff66cc,
+        0 0 24px #ff99cc;
+      animation: glowGirl 2s infinite alternate;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(255, 0, 204, 0.4);
+    }
+
     @keyframes flicker {
       0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
         opacity: 1;
@@ -54,8 +76,7 @@
           0 0 10px #ff00cc,
           0 0 20px #ff00cc,
           0 0 40px #ff0080,
-          0 0 80px #ff0080,
-          0 0 90px #ff0080;
+          0 0 80px #ff0080;
       }
       20%, 24%, 55% {
         opacity: 0.4;
@@ -69,11 +90,9 @@
       100% { transform: scale(1); }
     }
 
-    img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 12px;
-      box-shadow: 0 10px 30px rgba(255, 0, 204, 0.4);
+    @keyframes glowGirl {
+      0% { transform: translateY(0px); opacity: 1; }
+      100% { transform: translateY(-5px); opacity: 0.9; }
     }
   </style>
 </head>
@@ -81,8 +100,14 @@
   <h1>BENSARLLOOHHAA</h1>
 
   <div class="bffs">
-    <div class="bff">🎉 BFF #1 🎊</div>
-    <div class="bff">🎊 BFF #2 🎉</div>
+    <div class="bff">
+      <div class="bff-title">🎉 BFF #1 🎊</div>
+      <div class="girl">💃👗💄✨</div>
+    </div>
+    <div class="bff">
+      <div class="bff-title">🎊 BFF #2 🎉</div>
+      <div class="girl">👑👠👜🎀</div>
+    </div>
   </div>
 
   <img src="Screenshot 2025-08-04 at 20.56.21.png" alt="Bensarlloha Screenshot" />
